--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
-
+	<link id="theme-style" rel="stylesheet" href="assets/css/style.css">
 </head> 
 
 <body>
@@ -81,7 +81,7 @@
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
-						<div class="intro">
+						<div class="textarea">
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔱MEGA CRACKING PACK VERSION 7🔱
 <br>
