--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						BIGGEST GIVEAWAY EVER BY Beta Programmer
 <br>
-<br>						🔗LINK: https://mega.nz/file/PuhBURhI#y2hc1ZQUuf4KawlslcbOjlhFrEtWkvLFohmMnCEoyWY
+<br>						🔗LINK: <a href="https://mega.nz/file/PuhBURhI#y2hc1ZQUuf4KawlslcbOjlhFrEtWkvLFohmMnCEoyWY">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔰WEB 🕸 SECURITY AND SQL INJECTION 💉 TUTORIAL (udemy course) 🔰
 <br>
@@ -366,14 +366,14 @@
 <br>						
 <br>						👇AND LOTS ABOUT SQL injection
 <br>
-<br>						🔗LINK:https://www.udemy.com/course/sql-injection-attacks/?couponCode=12qw1
+<br>						🔗LINK: <a href="https://www.udemy.com/course/sql-injection-attacks/?couponCode=12qw1">Touch Here</a>
 <br>
 <br>						❤️SHARE AND SUPPORT US❤️
 <br>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Best and detailed tutorials for CEH:
 <br>
-<br>						https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg/folder/vfgiDK4T
+<br>						<a href="https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg/folder/vfgiDK4T">Touch Here</a>
 <br>
 <br>						💥Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -381,7 +381,7 @@
 <br>
 <br>						Check this application:
 <br>
-<br>						https://play.google.com/store/apps/details?id=com.haxorkit
+<br>						<a href="https://play.google.com/store/apps/details?id=com.haxorkit">Touch Here</a>
 <br>
 <br>						This might answer your question!
 <br>
@@ -391,13 +391,13 @@
 <br>
 <br>						Learn A-Z of malware analysis:
 <br>
-<br>						https://mega.nz/folder/1IAlRaza#T6rHMSM2PSQsFdU29BLTDA
+<br>						<a href="https://mega.nz/folder/1IAlRaza#T6rHMSM2PSQsFdU29BLTDA">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Want to earn bounty, learn bug bounty:
 <br>
-<br>						https://drive.google.com/folderview?id=14zlqgin6rUfr6jQRBCLbbP8P8Vdypz7x 
+<br>						<a href="https://drive.google.com/folderview?id=14zlqgin6rUfr6jQRBCLbbP8P8Vdypz7x">Touch Here</a> 
 <br>
 <br>						💥 Knowledge is god 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -405,11 +405,11 @@
 <br>
 <br>						N+
 <br>
-<br>						https://mega.nz/folder/e75VmKJT#8Kc8MzSWKrhqQE4oVhJooA
+<br>						<a href="https://mega.nz/folder/e75VmKJT#8Kc8MzSWKrhqQE4oVhJooA">Touch Here</a>
 <br>
 <br>						💥 Knowledge is god 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
-<br>						https://mega.nz/folder/Osl3AbDR#uIa0k3nO57VHchqAeX7_6A
+<br>						<a href="https://mega.nz/folder/Osl3AbDR#uIa0k3nO57VHchqAeX7_6A">Touch Here</a>
 <br>
 <br>						CCNA Complete 👆🏻
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -419,7 +419,7 @@
 <br>
 <br>						Paid book for free
 <br>
-<br>						https://mega.nz/file/PYwH1ICK#IfCoxIG2cvVTWfct0UaACSVUXa901_BJ_QjHnshtqUM%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B
+<br>						<a href="https://mega.nz/file/PYwH1ICK#IfCoxIG2cvVTWfct0UaACSVUXa901_BJ_QjHnshtqUM%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B%E2%80%8B">Touch Here</a>
 <br>
 <br>						Key : IfCoxIG2cvVTWfct0UaACSVUXa901_BJ_QjHnshtqUM
 <br>
@@ -427,7 +427,7 @@
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Collection of repositories that can be used for bug bounty! Good for beginners!
 <br>
-<br>						https://awesomeopensource.com/projects/bugbounty 
+<br>						<a href="https://awesomeopensource.com/projects/bugbounty">Touch Here</a>
 <br>
 <br>						Happy Hacking
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -435,9 +435,9 @@
 <br>
 <br>						This course was free for a short time! Now its paid, but I am sharing it with you for FREE!!
 <br>
-<br>						Udemy Link :- https://www.udemy.com/course/python-complete/
+<br>						Udemy Link :- <a href="https://www.udemy.com/course/python-complete/">Touch Here</a>
 <br>
-<br>						Download here:- https://anonfiles.com/78J6yb56ob/The_Complete_Python_3_Course_Beginner_to_Advanced_rar
+<br>						Download here:- <a href="https://anonfiles.com/78J6yb56ob/The_Complete_Python_3_Course_Beginner_to_Advanced_rar">Touch Here</a>
 <br>
 <br>						You might need proxy to open anonfiles.com
 <br>
@@ -447,7 +447,7 @@
 <br>
 <br>						Download now:
 <br>
-<br>						https://mega.nz/folder/SpsQXY5J#KFd1E4yVyoh4Nm2AeNuU1w
+<br>						<a href="https://mega.nz/folder/SpsQXY5J#KFd1E4yVyoh4Nm2AeNuU1w">Touch Here</a>
 <br>
 <br>						💥Knowledge is god💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -471,43 +471,43 @@
 <br>						1️⃣5️⃣ Bonus Section
 <br>
 <br>						Download link:-
-<br>						https://mega.nz/folder/3ipEGIzZ#VAvV7N8XZHD-sZ3RULvI9g
+<br>						<a href="https://mega.nz/folder/3ipEGIzZ#VAvV7N8XZHD-sZ3RULvI9g">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Advance penetration testing tutorials
 <br>
-<br>						https://mega.nz/folder/3TRG2IiK#cYUfjdBRz4FlsfZFedx4NA
+<br>						<a href="https://mega.nz/folder/3TRG2IiK#cYUfjdBRz4FlsfZFedx4NA">Touch Here</a>
 <br>
 <br>						💥 Knowledge is god 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Security+ tutorials
 <br>
-<br>						https://mega.nz/folder/mmQC2S6I#lLEiuCWz-pjvQ1UtVxk2Jwj
+<br>						<a href="https://mega.nz/folder/mmQC2S6I#lLEiuCWz-pjvQ1UtVxk2Jwj">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Soc Analyst:
 <br>
-<br>						https://mega.nz/folder/ExV3mITb#7eCbqf1Fzrf6x5TyVea9Hw/folder/Rw9lRYxB
+<br>						<a href="https://mega.nz/folder/ExV3mITb#7eCbqf1Fzrf6x5TyVea9Hw/folder/Rw9lRYxB">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Practical Ethical Hacking course:
 <br>
-<br>						https://mega.nz/folder/XxhlUbLI#bDk8x58nSQqdvGQOJ_FG1w
+<br>						<a href="https://mega.nz/folder/XxhlUbLI#bDk8x58nSQqdvGQOJ_FG1w">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						All the tools that can be used for mobile app penetration testing:
 <br>
-<br>						https://hackersonlineclub.com/mobile-security-penetration-testing/
+<br>						<a href="https://hackersonlineclub.com/mobile-security-penetration-testing/">Touch Here</a>
 <br>
 <br>						💥 Knowledge is The new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Ultimate Hacking Package:
 <br>
-<br>						https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg
+<br>						<a href="https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg">Touch Here</a>
 <br>
 <br>						💥 Knowledge is the new God 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -515,11 +515,11 @@
 <br>
 <br>						Biggest collection available!
 <br>
-<br>						https://mega.nz/folder/YjhzxbDL#kO6IGODmvUzseZT4vib84g/folder/tmhl3LqS
+<br>						<a href="https://mega.nz/folder/YjhzxbDL#kO6IGODmvUzseZT4vib84g/folder/tmhl3LqS">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Android application bug bounty:
 <br>
-<br>						https://mega.nz/folder/h4hHGIYa#2ta4n94iQNnVzpJToVPLVw
+<br>						<a href="https://mega.nz/folder/h4hHGIYa#2ta4n94iQNnVzpJToVPLVw">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						​​​​🔰Dedsec Online Account Cracking Course 🔰
 <br>
@@ -540,7 +540,7 @@
 <br>
 <br>						🎊 Bonus:- Included Many Paid Tools In The Course For Free 😊
 <br>
-<br>						🔻L?NK :- bit.ly/ABCD0261
+<br>						🔻L?NK :- <a href="https://bit.ly/ABCD0261">Touch Here</a>
 <br>
 <br>						🔺Share And Support Us🔻
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -550,22 +550,22 @@
 <br>						👉Goonezys Link-
 <br>
 <br>
-<br>						https://mega.nz/folder/UkIyFSgZ#6E0fz-r0gfkUYwtsRsIZvw
+<br>						<a href="https://mega.nz/folder/UkIyFSgZ#6E0fz-r0gfkUYwtsRsIZvw">Touch Here</a>
 <br>
 <br>						👉Koononte Fraud bible link-
 <br>
 <br>
-<br>						https://mega.nz/folder/rKpA1AZb#IFYtYw_B1rv_PvEmMRquuw
+<br>						<a href="https://mega.nz/folder/rKpA1AZb#IFYtYw_B1rv_PvEmMRquuw">Touch Here</a>
 <br>
 <br>						👉Fraud Bible 2020 link-
 <br>
 <br>
-<br>						https://mega.nz/folder/SvojiB5Q#TFNLypoj0q0cwmRuggDlyg
+<br>						<a href="https://mega.nz/folder/SvojiB5Q#TFNLypoj0q0cwmRuggDlyg">Touch Here</a>
 <br>
 <br>						👉Mega Pack link-
 <br>
 <br>
-<br>						https://mega.nz/folder/KagDUCZA#hkK1TU-QSYAu1rg0AZAKDQ
+<br>						<a href="https://mega.nz/folder/KagDUCZA#hkK1TU-QSYAu1rg0AZAKDQ">Touch Here</a>
 <br>
 <br>						♥️join today for more expensive powerfull courses & much more♥️
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -579,7 +579,7 @@
 <br>						• CRACKING TOOLS 
 <br>						• COMBOS 
 <br>
-<br>						Ⓜ️ Download - https://mega.nz/folder/9F8kAKqS#_r2iZAZSFtwF2dVc_2ulbA
+<br>						Ⓜ️ Download - <a href="https://mega.nz/folder/9F8kAKqS#_r2iZAZSFtwF2dVc_2ulbA">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔰 FRAUD BIBLE 2020 TOOLS 🔰
 <br>
@@ -587,7 +587,7 @@
 <br>
 <br>						Check above for 50GB Fraud Bible methods 
 <br>
-<br>						https://mega.nz/folder/MltgHKCb#s08xCpWZhqguHjuiO_Bcsw
+<br>						<a href="https://mega.nz/folder/MltgHKCb#s08xCpWZhqguHjuiO_Bcsw">Touch Here</a>
 <br>
 <br>						Enjoy 👍❤️
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -603,35 +603,35 @@
 <br>
 <br>						DOWNLOAD NOW
 <br>
-<br>						https://xendrive.ru/5TgWfYM/evileaks-su-2019124t170124z-01-zip
-<br>						https://xendrive.ru/J4SoH13/evileaks-su-2019124t170124z-03-zip
-<br>						https://xendrive.ru/AEIQA1h/evileaks-su-2019124t170124z-013-zip
-<br>						https://xendrive.ru/mP3oTtq/evileaks-su-2019124t170124z-02-zip
-<br>						https://xendrive.ru/st1kT3X/evileaks-su-2019124t170124z-012-zip
-<br>						https://xendrive.ru/fWKLZoV/evileaks-su-2019124t170124z-08-zip
-<br>						https://xendrive.ru/AbIleuj/evileaks-su-2019124t170124z-04-zip
-<br>						https://xendrive.ru/9NSEwLt/evileaks-su-2019124t170124z-05-zip
-<br>						https://xendrive.ru/5f5NAju/evileaks-su-2019124t170124z-09-zip
-<br>						https://xendrive.ru/1M3V7VB/evileaks-su-2019124t170124z-06-zip
+<br>						<a href="https://xendrive.ru/5TgWfYM/evileaks-su-2019124t170124z-01-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/J4SoH13/evileaks-su-2019124t170124z-03-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/AEIQA1h/evileaks-su-2019124t170124z-013-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/mP3oTtq/evileaks-su-2019124t170124z-02-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/st1kT3X/evileaks-su-2019124t170124z-012-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/fWKLZoV/evileaks-su-2019124t170124z-08-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/AbIleuj/evileaks-su-2019124t170124z-04-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/9NSEwLt/evileaks-su-2019124t170124z-05-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/5f5NAju/evileaks-su-2019124t170124z-09-zip">Touch Here</a>
+<br>						<a href="https://xendrive.ru/1M3V7VB/evileaks-su-2019124t170124z-06-zip">Touch Here</a>
 <br>
 <br>						MIRROR
 <br>
-<br>						https://mega.nz/#F!d8MRRC6R!wWjUhuNsXXrlyxsqrRHjVA
+<br>						<a href="https://mega.nz/#F!d8MRRC6R!wWjUhuNsXXrlyxsqrRHjVA">Touch Here</a>
 <br>
-<br>						https://multiup.org/3f1106a292f2b22b35f4777b9681685c
-<br>						https://multiup.org/0be9f8a0d0a566fa63acb09f830f32d1
-<br>						https://multiup.org/d7b101aae73dd5a7bd221efc1582397e
-<br>						https://multiup.org/c42e8f778a22848cc1b297f685b3e353
-<br>						https://multiup.org/fd024074e99157dfc613cc6f403bd395
-<br>						https://multiup.org/22166fe11b026ea9cb4809bb6ac59a69
-<br>						https://multiup.org/abffe7336680b94df424056552b12e87
-<br>						https://multiup.org/592ae7f86bef4387bdc5047fe51edf80
-<br>						https://multiup.org/08c631863abbfb0fdc5eaf09c71191e8
-<br>						https://multiup.org/933fac58eca294d7f0707eaf9ebdbe37
+<br>						<a href="https://multiup.org/3f1106a292f2b22b35f4777b9681685c">Touch Here</a>
+<br>						<a href="https://multiup.org/0be9f8a0d0a566fa63acb09f830f32d1">Touch Here</a>
+<br>						<a href="https://multiup.org/d7b101aae73dd5a7bd221efc1582397e">Touch Here</a>
+<br>						<a href="https://multiup.org/c42e8f778a22848cc1b297f685b3e353">Touch Here</a>
+<br>						<a href="https://multiup.org/fd024074e99157dfc613cc6f403bd395">Touch Here</a>
+<br>						<a href="https://multiup.org/22166fe11b026ea9cb4809bb6ac59a69">Touch Here</a>
+<br>						<a href="https://multiup.org/abffe7336680b94df424056552b12e87">Touch Here</a>
+<br>						<a href="https://multiup.org/592ae7f86bef4387bdc5047fe51edf80">Touch Here</a>
+<br>						<a href="https://multiup.org/08c631863abbfb0fdc5eaf09c71191e8">Touch Here</a>
+<br>						<a href="https://multiup.org/933fac58eca294d7f0707eaf9ebdbe37">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Video tutorials of all the hacking courses you can think of:
 <br>
-<br>						https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg
+<br>						<a href="https://mega.nz/folder/HGg2TCTA#CjyPNP3bktKV9w4_g2xUDg">Touch Here</a>
 <br>
 <br>						💥 Knowledge is god 💥
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
@@ -647,7 +647,7 @@
 <br>						o Size 3 GB Highly Compressed 
 <br>						o Ultra HD Videos 
 <br>						
-<br>						Link:- https://xendrive.ru/KIAjaIt/antivirus-antivirus-evasion-course-by-dedsec-zip
+<br>						Link:- <a href="https://xendrive.ru/KIAjaIt/antivirus-antivirus-evasion-course-by-dedsec-zip">Touch Here</a>
 <br>						
 <br>						PASSWORD:- fraudstercrew.su
 <br>						
@@ -666,7 +666,7 @@
 <br>						
 <br>						ALL Videos Size 4.1gb 
 <br>						
-<br>						Link:- https://xendrive.ru/fbdQ9Hu/os-prashant-youtube-deleted-or-private-hacking-videos-colection-videos-language---hindi-zip 
+<br>						Link:- <a href="https://xendrive.ru/fbdQ9Hu/os-prashant-youtube-deleted-or-private-hacking-videos-colection-videos-language---hindi-zip">Touch Here</a>
 <br>						
 <br>						PASSWORD - fraudstercrew,su
 <br>						
@@ -674,19 +674,19 @@
 <br>						❌ TECHNICAL SAGAR COURSES ❌
 <br>						🔰Quick Hack:-
 <br>						
-<br>						https://www.mediafire.com/file/mrcz8aa7ji05a2m/
+<br>						<a href="https://www.mediafire.com/file/mrcz8aa7ji05a2m/">Touch Here</a>
 <br>
 <br>						🔰Tech Master:-
 <br>						
-<br>						https://www.mediafire.com/file/umk316gpoy3tlbg/
+<br>						<a href="https://www.mediafire.com/file/umk316gpoy3tlbg/">Touch Here</a>
 <br>
 <br>						🔰Money Making:-
 <br>						
-<br>						http://www.mediafire.com/file/9scal11vbu97tyo/
+<br>						<a href="http://www.mediafire.com/file/9scal11vbu97tyo/">Touch Here</a>
 <br>
 <br>						🔰Hackstars - Cybersecurity Course:-
 <br>						
-<br>						https://mega.nz/#!vMcUHKrQ!WotykEj6aqHOQ99OHElnDhnT8kkE3o6-sxF8T3kNCmM
+<br>						<a href="https://mega.nz/#!vMcUHKrQ!WotykEj6aqHOQ99OHElnDhnT8kkE3o6-sxF8T3kNCmM">Touch Here</a>
 <br>
 <br>						Credit:- @beta.programmer
 <br>
@@ -700,7 +700,7 @@
 <br>						
 <br>						Pass - os-prashant{{{{####}}}}
 <br>						
-<br>						🔗Link : https://mega.nz/file/yV4S2YAA#u3vLbF5zbs1J0nYjS1ZDdq5ntUp1H3RQjT8p6bWQyQc
+<br>						🔗Link : <a href="https://mega.nz/file/yV4S2YAA#u3vLbF5zbs1J0nYjS1ZDdq5ntUp1H3RQjT8p6bWQyQc">Touch Here</a>
 <br>						
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔰 BlackHat | Cracking Course Technical Navigator | Including Tools [Leaked] 🔰
@@ -721,7 +721,7 @@
 <br>						
 <br>						✅ Start Earning From Now.
 <br>						
-<br>						🔗 Link:- https://mega.nz/file/CLAiFAKA#Pi-x2YReOXCwPcfupDZM3RMOP9r30JlmlSKVe7WGT6Y
+<br>						🔗 Link:- <a href="https://mega.nz/file/CLAiFAKA#Pi-x2YReOXCwPcfupDZM3RMOP9r30JlmlSKVe7WGT6Y">Touch Here</a>
 <br>						Password :- onehack.us
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						​​🔰DutchMan Full Hacking Course🔰
@@ -748,13 +748,14 @@
 <br>						
 <br>						📂Size: 603MB
 <br>						
-<br>						⭕️Link: http://www.mediafire.com/file/6yhalmkfdbs9njs/DUTCHMAN_FULL_COURSE_PACK_&amp;_DELETED_VIDEOS.rar/file
+<br>						⭕️Link: <a href="http://www.mediafire.com/file/6yhalmkfdbs9njs/DUTCHMAN_FULL_COURSE_PACK_&amp;_DELETED_VIDEOS.rar/file">Touch Here</a>
 <br>						
 <br>						🔑Password: vi3us
 <br>						
 <br>						🔺Share And Support Us🔻
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
-<br>						The Web Application Hacker's Handbook: Discovering and Exploiting Security Flaws :- https://drive.google.com/file/d/10YZIzf-IJ4USvUZ_9__671uD4_XOCoAY/view?usp=drivesdk
+<br>						The Web Application Hacker's Handbook: Discovering and Exploiting Security Flaws :- 
+<br>						<a href="https://drive.google.com/file/d/10YZIzf-IJ4USvUZ_9__671uD4_XOCoAY/view?usp=drivesdk">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						BLACK RADIATOR'S COMPLETE ETHICAL HACKING COURSE BEGINNER TO ADVANCED 
 <br>						
@@ -781,23 +782,23 @@
 <br>						You will master Testing Web Application Security
 <br>						
 <br>						
-<br>						Link : https://mega.nz/#F!W4B22QwL!ASup26IJ_Cls6JD2_wfRpg
+<br>						Link : <a href="https://mega.nz/#F!W4B22QwL!ASup26IJ_Cls6JD2_wfRpg">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Ethical hacking in Termux :-
-<br>						https://drive.google.com/file/d/148LXyQr03aSGibq8-Juo_IqYm-DjsgOL/view
+<br>						<a href="https://drive.google.com/file/d/148LXyQr03aSGibq8-Juo_IqYm-DjsgOL/view">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔰 ADVANCED SOCIAL MEDIA HACKING COURSE🔰
 <br>						
 <br>						Course 🔗 Link
-<br>						https://mega.nz/folder/38NAxCZZ#OH_Bwud16pxlb4Q4dKCBKQ
+<br>						<a href="https://mega.nz/folder/38NAxCZZ#OH_Bwud16pxlb4Q4dKCBKQ">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						Carding Course :-
-<br>						https://xendrive.ru/WKM49Sz/t2s-advanced-pac-pasword-evileaks-su-zip
+<br>						<a href="https://xendrive.ru/WKM49Sz/t2s-advanced-pac-pasword-evileaks-su-zip">Touch Here</a>
 <br>						
 <br>						PAS- evileaks.su
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						CCNA PREMIUM COURSE :-
-<br>						https://mega.nz/#F!E8ZznLjK!7svH9q5kuygqXoeRSgGwmQ
+<br>						<a href="https://mega.nz/#F!E8ZznLjK!7svH9q5kuygqXoeRSgGwmQ">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 						</div>
 					</div>
