--- a/giveawayBlog.html
+++ b/giveawayBlog.html
@@ -67,7 +67,7 @@
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center">
 			    <h2 class="heading">β(Beta) Programmer</h2> 
-			    <div class="intro">Welcome to Hello World..!!<br>SEC_RITY is not complited without U..!!</div>
+			    <div class="intro">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</div>
 			    <!-- <form class="signup-form form-inline justify-content-center pt-3">
                     <div class="form-group">
                         <label class="sr-only" for="semail">Your email</label>
