--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon" />
     <script type="text/javascript" src="assets/js/script.js"></script>
+    <script data-ad-client="ca-pub-3445903324072116" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <img id="userPhoto" src="assets/images/profile.png" alt="User Photo">
 
     <spam id="userName">@BETA.PROGRAMMER</spam>
-    <span id="tagLine">Welcome to Hello World..!!<br>SEC_RITY is not complited without U..!!</span>
+    <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</span>
 
     <div id="links">
         <a class="link" href="giveawayBlog.html" target="_blank" style="border-radius: 25px;"><i
