--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <img id="userPhoto" src="assets/images/profile.png" alt="User Photo">
 
-    <spam id="userName">@BETA.PROGRAMMER</spam>
+    <spam id="userName"><a href="index.html">@BETA.PROGRAMMER</a></spam>
     <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</span>
 
     <div id="links">
         <a class="link" href="giveawayBlog.html" target="_blank" style="border-radius: 25px;"><i
             class="fa fa-globe" aria-hidden="true"></i> Mega Giveaway</a>
-        <a class="link" href="https://www.darkwiki.in/how-to-customize-termux-make-termux-terminal-look-awesome-ancii-color-font-style/" target="_blank" style="border-radius: 25px;"><i
+        <a class="link" href="termuxBlog.html" target="_blank" style="border-radius: 25px;"><i
                 class="fa fa-link" aria-hidden="true"></i> How I Customize My Termux</a>
         <a class="link" href="https://github.com/captainjohnexe/PxP" target="_blank" style="border-radius: 25px;"><i
             class="fa fa-github" aria-hidden="true"></i> PHISHERxPR0 Tool</a>
