--- a/termuxBlog.html
+++ b/termuxBlog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>How to Customize Termux, Make Termux terminal look Awesome - ANCII, Color, Font, Style - Darkwiki</title>
+    <title>How to Customize Termux, Make Termux terminal look Awesome - ASCII, Color, Font, Style</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -80,7 +80,7 @@
 	    <article class="blog-post px-3 py-5 p-md-5">
 		    <div class="container">
 			    <header class="blog-post-header">
-					<h2 class="title mb-2">How to Customize Termux, Make Termux terminal look Awesome – ANCII, Color, Font, Style</h2>
+					<h2 class="title mb-2">How to Customize Termux, Make Termux terminal look Awesome – ASCII, Color, Font, Style</h2>
 				</header>
 			    
 			    <div class="blog-post-body">
