--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <img id="userPhoto" src="assets/images/profile.png" alt="User Photo">
 
-    <spam id="userName"><a href="index.html">@BETA.PROGRAMMER</a></spam>
+    <spam id="userName">@BETA.PROGRAMMER</spam>
     <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</span>
 
     <div id="links">
