--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</span>
 
     <div id="links">
+        <a class="link" href="https://m.twitch.tv/ipllivee" target="_blank" style="border-radius: 25px;"><i
+            class="fa fa-child" aria-hidden="true"></i> IPL 2020 HINDI</a>
+        <a class="link" href="https://m.twitch.tv/ipl2020livestreaming" target="_blank" style="border-radius: 25px;"><i
+            class="fa fa-child" aria-hidden="true"></i> IPL 2020 English</a>
         <a class="link" href="giveawayBlog.html" target="_blank" style="border-radius: 25px;"><i
             class="fa fa-globe" aria-hidden="true"></i> Mega Giveaway</a>
         <a class="link" href="termuxBlog.html" target="_blank" style="border-radius: 25px;"><i
